--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<body id="bitrix_install_template">
 		<table class="installer-main-table" id="container">
 			<tbody>
+			<p>Ppppppp</p>
 				<tr>
 					<td class="installer-main-table-cell">
 						<div class="installer-block-wrap">
